syntax = "proto3";
package helloworld;

import "validate/validate.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc UploadHello (stream HelloRequest) returns (HelloReply);
  rpc ChatHello (stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1 [(validate.rules).string = {
    min_len: 3,
    max_len: 50,
    pattern: "^[a-zA-Z0-9_-]+$"
  }];
  
  optional string email = 2 [(validate.rules).string.email = true];
  
  optional int32 age = 3 [(validate.rules).int32 = {
    gte: 0,
    lte: 150
  }];
}

message HelloReply {
  string message = 1;
}
